--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="container-fluid" ng-controller="IndexCtrl">
+		<!-- Patient Details -->
 		<h1>PATIENT NAME: KAMILAH BINTI SEMAN</h1>
 		<div class="panel panel-default">
 			<div class="panel-heading">PATIENT DETAILS</div>
@@ -31,6 +32,116 @@
 				</div>								
 			</div>
 		</div>
+		<!-- Vital Signs Input -->
+		<div class="panel panel-default">
+			<div class="panel-heading">VITAL SIGNS</div>
+			<div class="panel-body">
+				<table class="table table-bordered table-striped">
+					<thead>
+						<tr><th colspan="9"><h4>VITAL SIGNS</h4></th></tr>				
+						<tr>	
+							<th class="text-center">Date & Time</th>
+							<th class="text-center">BP (mmg) Systolic</th>
+							<th class="text-center">BP (mmg) Diastolic</th>
+							<th class="text-center">PR (per min)</th><!-- vsm.hr -->
+							<th class="text-center">RR (per min)</th><!-- vsm.respiration -->
+							<th class="text-center">SPO2 (%)</th>
+							<th class="text-center">ETCO2</th>
+							<th class="text-center">Temp (C)</th>
+							<th class="text-center">Pain Score</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><input class="form-control" ng-model="vsm.date"></td>
+							<td><input class="form-control" ng-model="vsm.systolic"></td>
+							<td><input class="form-control" ng-model="vsm.diastolic"></td>
+							<td><input class="form-control" ng-model="vsm.hr"></td>
+							<td><input class="form-control" ng-model="vsm.respiration"></td>
+							<td><input class="form-control" ng-model="vsm.o2sat"></td>
+							<td><input class="form-control" ng-model="vsm.etco2"></td>
+							<td><input class="form-control" ng-model="vsm.temperature"></td>
+							<td><input class="form-control" ng-model="vsm.pain"></td>
+						</tr>
+					</tbody>
+				</table>
+				<table class="table table-bordered table-striped">
+					<thead>
+						<tr><th colspan="16"><h4>OTHER OBSERVATIONS</h4></th></tr>
+						<tr>
+							<th class="text-center">MAP</th>
+							<th class="text-center">Pulse Pressure</th>
+							<th class="text-center">Pulse Volume</th>
+							<th class="text-center">Capillary Refill Time (CRT)</th>
+							<th class="text-center">Shock Index</th>
+							<th class="text-center" colspan="4">GCS</th>
+							<th class="text-center">Blood Glucose</th>
+							<th class="text-center">Blood Ketone</th>
+							<th class="text-center">RTS Score</th>
+							<th class="text-center">Weight (kg)</th>
+							<th class="text-center">Height (cm)</th>
+							<th class="text-center">BMI</th>
+							<th class="text-center">Ideal Body Weight</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><input class="form-control" ng-model="vsm.map"></td>
+							<td><input class="form-control" ng-model="vsm.pulse"></td>
+							<td><input class="form-control" ng-model="vsm.pulsevolume"></td><!-- pulse volume -->
+							<td><input class="form-control" ng-model="vsm.crt"></td><!-- CRT -->
+							<td><input class="form-control" ng-model="vsm.shockindex"></td><!-- shock index -->
+							<!-- GCS -->
+							<td>
+								<div class="row">
+									<div class="col-lg-2">E</div>
+									<div class="col-lg-4"><input class="form-control" ng-model="vsm.gcse"></div>
+								</div>
+							</td>
+							<td>
+								<div class="row">
+									<div class="col-lg-2">V</div>
+									<div class="col-lg-4"><input class="form-control" ng-model="vsm.gcsv"></div>
+								</div>
+							</td>
+							<td>
+								<div class="row">
+									<div class="col-lg-2">M</div>
+									<div class="col-lg-4"><input class="form-control" ng-model="vsm.gcsm"></div>
+								</div>
+							</td>
+							<td>
+								<div class="row">
+									<div class="col-lg-3">Total</div>
+									<div class="col-lg-3"><input class="form-control" ng-model="vsm.gcstotal"></div>
+								</div>
+							</td>
+							<!-- GCS -->
+							<td><input class="form-control" ng-model="vsm.bloodglucose"></td><!-- blood glucose -->
+							<td><input class="form-control" ng-model="vsm.bloodketone"></td><!-- blood ketone -->
+							<td><input class="form-control" ng-model="vsm.rtsscore"></td><!-- RTS -->
+							<td><input class="form-control" ng-model="vsm.weight"></td>
+							<td><input class="form-control" ng-model="vsm.height"></td>
+							<td><input class="form-control" ng-model="vsm.bmi"></td>
+							<td><input class="form-control" ng-model="vsm.idealweight"></td><!-- ideal body weight -->					
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="panel-footer">
+				<div class="row">
+					<div class="col-lg-10">
+						<button class="btn btn-success" ng-click="device()">Get Input From Device</button>&nbsp;&nbsp;
+					</div>
+					<div class="col-lg-2">
+						<button class="btn btn-primary" ng-click="add()">Add</button>&nbsp;&nbsp;
+						<button class="btn btn-info" ng-click="update()">Update</button>&nbsp;&nbsp;
+						<button class="btn btn-info" ng-click="clear()">Clear</button>&nbsp;&nbsp;
+					</div>
+				</div>				
+			</div>
+		</div>
+		<!-- Vital Signs History -->
 		<div class="panel panel-default">
 			<div class="panel-heading" role="tab" id="headingOne">
 				<h4 class="panel-title">
