--- a/public/index.html
+++ b/public/index.html
@@ -1,154 +1,204 @@
 <!DOCTYPE html>
 <html ng-app="indexApp">
 <head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">	
-	<title>HIS KKM</title>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+		$(function(){
+			$("#patientDetails").load("patientDetails.html");
+			$("#clerkingNotes").load("clerkingNotes.html");
+			$("#bodyHistory").load("history.html");
+		});
+	</script>
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+	crossorigin="anonymous">
+<title>HIS KKM</title>
 </head>
 <body>
 	<div class="container-fluid" ng-controller="IndexCtrl">
+		<br />
 		<!-- Patient Details -->
-		<h1>PATIENT NAME: KAMILAH BINTI SEMAN</h1>
-		<div class="panel panel-default">
-			<div class="panel-heading">PATIENT DETAILS</div>
-			<div class="panel-body">
-				<div class="row">
-					<div class="col-lg-2">MRN: </div>
-					<div class="col-lg-4">HRPB0001</div>
-					<div class="col-lg-2">IC NO: </div>
-					<div class="col-lg-4">671029035432</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-2">AGE: </div>
-					<div class="col-lg-4">50 YRS</div>
-					<div class="col-lg-2">GENDER: </div>
-					<div class="col-lg-4">FEMALE</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-2">CLINICIAN NAME: </div>
-					<div class="col-lg-4">DR AAINAA NADIAH BINTI ABD RAZAK</div>					
-					<div class="col-lg-2">CLINICIAN MMC: </div>
-					<div class="col-lg-4">56446</div>
-				</div>								
+		<div class="panel panel-default panel-primary">
+			<div class="panel-heading">Patient Info</div>
+			<div id="patientDetails" class="panel-body"></div>
+		</div>
+		<!-- ETD CHEST PAIN CLERKING NOTE -->
+		<div class="panel panel-default panel-primary">
+			<div class="panel-heading" role="tab" id="clerkingNoteHeading">
+				<h4 class="panel-title">
+					<a role="button" data-toggle="collapse"
+						href="#collapseClearkingNote" aria-expanded="true"
+						aria-controls="collapseClearkingNote">+ ETD CHEST PAIN
+						CLERKING NOTE</a>
+				</h4>
+			</div>
+			<div id="collapseClearkingNote" class="panel-collapse collapse in"
+				role="tabpanel" aria-labelledby="clerkingNoteHeading">
+				<div id="clerkingNotes" class="panel-body"></div>
 			</div>
 		</div>
-		<!-- Vital Signs Input -->
-		<div class="panel panel-default">
-			<div class="panel-heading">VITAL SIGNS</div>
-			<div class="panel-body">
-				<table class="table table-bordered table-striped">
-					<thead>
-						<tr><th colspan="9"><h4>VITAL SIGNS</h4></th></tr>				
-						<tr>	
-							<th class="text-center">Date & Time</th>
-							<th class="text-center">BP (mmg) Systolic</th>
-							<th class="text-center">BP (mmg) Diastolic</th>
-							<th class="text-center">PR (per min)</th><!-- vsm.hr -->
-							<th class="text-center">RR (per min)</th><!-- vsm.respiration -->
-							<th class="text-center">SPO2 (%)</th>
-							<th class="text-center">ETCO2</th>
-							<th class="text-center">Temp (C)</th>
-							<th class="text-center">Pain Score</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td><input class="form-control" ng-model="vsm.date"></td>
-							<td><input class="form-control" ng-model="vsm.systolic"></td>
-							<td><input class="form-control" ng-model="vsm.diastolic"></td>
-							<td><input class="form-control" ng-model="vsm.hr"></td>
-							<td><input class="form-control" ng-model="vsm.respiration"></td>
-							<td><input class="form-control" ng-model="vsm.o2sat"></td>
-							<td><input class="form-control" ng-model="vsm.etco2"></td>
-							<td><input class="form-control" ng-model="vsm.temperature"></td>
-							<td><input class="form-control" ng-model="vsm.pain"></td>
-						</tr>
-					</tbody>
-				</table>
-				<table class="table table-bordered table-striped">
-					<thead>
-						<tr><th colspan="16"><h4>OTHER OBSERVATIONS</h4></th></tr>
-						<tr>
-							<th class="text-center">MAP</th>
-							<th class="text-center">Pulse Pressure</th>
-							<th class="text-center">Pulse Volume</th>
-							<th class="text-center">Capillary Refill Time (CRT)</th>
-							<th class="text-center">Shock Index</th>
-							<th class="text-center" colspan="4">GCS</th>
-							<th class="text-center">Blood Glucose</th>
-							<th class="text-center">Blood Ketone</th>
-							<th class="text-center">RTS Score</th>
-							<th class="text-center">Weight (kg)</th>
-							<th class="text-center">Height (cm)</th>
-							<th class="text-center">BMI</th>
-							<th class="text-center">Ideal Body Weight</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td><input class="form-control" ng-model="vsm.map"></td>
-							<td><input class="form-control" ng-model="vsm.pulse"></td>
-							<td><input class="form-control" ng-model="vsm.pulsevolume"></td><!-- pulse volume -->
-							<td><input class="form-control" ng-model="vsm.crt"></td><!-- CRT -->
-							<td><input class="form-control" ng-model="vsm.shockindex"></td><!-- shock index -->
-							<!-- GCS -->
-							<td>
-								<div class="row">
-									<div class="col-lg-2">E</div>
-									<div class="col-lg-4"><input class="form-control" ng-model="vsm.gcse"></div>
-								</div>
-							</td>
-							<td>
-								<div class="row">
-									<div class="col-lg-2">V</div>
-									<div class="col-lg-4"><input class="form-control" ng-model="vsm.gcsv"></div>
-								</div>
-							</td>
-							<td>
-								<div class="row">
-									<div class="col-lg-2">M</div>
-									<div class="col-lg-4"><input class="form-control" ng-model="vsm.gcsm"></div>
-								</div>
-							</td>
-							<td>
-								<div class="row">
-									<div class="col-lg-3">Total</div>
-									<div class="col-lg-3"><input class="form-control" ng-model="vsm.gcstotal"></div>
-								</div>
-							</td>
-							<!-- GCS -->
-							<td><input class="form-control" ng-model="vsm.bloodglucose"></td><!-- blood glucose -->
-							<td><input class="form-control" ng-model="vsm.bloodketone"></td><!-- blood ketone -->
-							<td><input class="form-control" ng-model="vsm.rtsscore"></td><!-- RTS -->
-							<td><input class="form-control" ng-model="vsm.weight"></td>
-							<td><input class="form-control" ng-model="vsm.height"></td>
-							<td><input class="form-control" ng-model="vsm.bmi"></td>
-							<td><input class="form-control" ng-model="vsm.idealweight"></td><!-- ideal body weight -->					
-						</tr>
-					</tbody>
-				</table>
+		<!-- History -->
+		<div class="panel panel-default panel-primary">
+			<div class="panel-heading" role="tab" id="historyHeading">
+				<h4 class="panel-title">
+					<a role="button" data-toggle="collapse" href="#collapseHistory"
+						aria-expanded="true" aria-controls="collapseHistory">+ HISTORY</a>
+				</h4>
 			</div>
-			<div class="panel-footer">
-				<div class="row">
-					<div class="col-lg-10">
-						<button class="btn btn-success" ng-click="device()">Get Input From Device</button>&nbsp;&nbsp;
-					</div>
-					<div class="col-lg-2">
-						<button class="btn btn-primary" ng-click="add()">Add</button>&nbsp;&nbsp;
-						<button class="btn btn-info" ng-click="update()">Update</button>&nbsp;&nbsp;
-						<button class="btn btn-info" ng-click="clear()">Clear</button>&nbsp;&nbsp;
-					</div>
-				</div>				
+			<div id="collapseHistory" class="panel-collapse collapse in"
+				role="tabpanel" aria-labelledby="historyHeading">
+				<div id="bodyHistory" class="panel-body"></div>
+			</div>
+		</div>
+		<!-- Physical Examination -->
+		<div class="panel panel-default panel-primary">
+			<div class="panel-heading" role="tab" id="physicalExaminationHeading">
+				<h4 class="panel-title">
+					<a role="button" data-toggle="collapse"
+						href="#collapsePhysicalExamination" aria-expanded="true"
+						aria-controls="collapsePhysicalExamination">+ PHYSICAL EXAMINATION</a>
+				</h4>
+			</div>
+			<div id="collapsePhysicalExamination"
+				class="panel-collapse collapse in" role="tabpanel"
+				aria-labelledby="physicalExaminationHeading">
+				<div class="panel-body">
+					<table class="table table-bordered table-striped">
+						<thead>
+							<tr>
+								<th colspan="9"><h4>VITAL SIGNS</h4></th>
+							</tr>
+							<tr>
+								<th class="text-center">Date & Time</th>
+								<th class="text-center">BP (mmg) Systolic</th>
+								<th class="text-center">BP (mmg) Diastolic</th>
+								<th class="text-center">PR (per min)</th>
+								<!-- vsm.hr -->
+								<th class="text-center">RR (per min)</th>
+								<!-- vsm.respiration -->
+								<th class="text-center">SPO2 (%)</th>
+								<th class="text-center">ETCO2</th>
+								<th class="text-center">Temp (C)</th>
+								<th class="text-center">Pain Score</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td><input class="form-control" ng-model="vsm.date"></td>
+								<td><input class="form-control" ng-model="vsm.systolic"></td>
+								<td><input class="form-control" ng-model="vsm.diastolic"></td>
+								<td><input class="form-control" ng-model="vsm.hr"></td>
+								<td><input class="form-control" ng-model="vsm.respiration"></td>
+								<td><input class="form-control" ng-model="vsm.o2sat"></td>
+								<td><input class="form-control" ng-model="vsm.etco2"></td>
+								<td><input class="form-control" ng-model="vsm.temperature"></td>
+								<td><input class="form-control" ng-model="vsm.pain"></td>
+							</tr>
+						</tbody>
+					</table>
+					<table class="table table-bordered table-striped">
+						<thead>
+							<tr>
+								<th colspan="16"><h4>OTHER OBSERVATIONS</h4></th>
+							</tr>
+							<tr>
+								<th class="text-center">MAP</th>
+								<th class="text-center">Pulse Pressure</th>
+								<th class="text-center">Pulse Volume</th>
+								<th class="text-center">Capillary Refill Time (CRT)</th>
+								<th class="text-center">Shock Index</th>
+								<th class="text-center" colspan="4">GCS</th>
+								<th class="text-center">Blood Glucose</th>
+								<th class="text-center">Blood Ketone</th>
+								<th class="text-center">RTS Score</th>
+								<th class="text-center">Weight (kg)</th>
+								<th class="text-center">Height (cm)</th>
+								<th class="text-center">BMI</th>
+								<th class="text-center">Ideal Body Weight</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td><input class="form-control" ng-model="vsm.map"></td>
+								<td><input class="form-control" ng-model="vsm.pulse"></td>
+								<td><input class="form-control" ng-model="vsm.pulsevolume"></td>
+								<!-- pulse volume -->
+								<td><input class="form-control" ng-model="vsm.crt"></td>
+								<!-- CRT -->
+								<td><input class="form-control" ng-model="vsm.shockindex"></td>
+								<!-- shock index -->
+								<!-- GCS -->
+								<td>
+									<div class='input-group input-group-sm'>
+                                        <span class='input-group-addon'>E</span>
+                                        <input class="form-control input-sm input-sm" ng-model="vsm.gcse">
+                                    </div>
+								</td>
+								<td>
+									<div class='input-group input-group-sm'>
+                                        <span class='input-group-addon'>V</span>
+                                        <input class="form-control input-sm input-sm" ng-model="vsm.gcsv">
+                                    </div>
+								</td>
+								<td>
+									<div class='input-group input-group-sm'>
+                                        <span class='input-group-addon'>M</span>
+                                        <input class="form-control input-sm input-sm" ng-model="vsm.gcsm">
+                                    </div>
+								</td>
+								<td>
+									<div class='input-group input-group-sm'>
+                                        <span class='input-group-addon'>Total</span>
+                                        <input class="form-control input-sm input-sm" ng-model="vsm.gcstotal">
+                                    </div>
+								</td>
+								<!-- GCS -->
+								<td><input class="form-control" ng-model="vsm.bloodglucose"></td>
+								<!-- blood glucose -->
+								<td><input class="form-control" ng-model="vsm.bloodketone"></td>
+								<!-- blood ketone -->
+								<td><input class="form-control" ng-model="vsm.rtsscore"></td>
+								<!-- RTS -->
+								<td><input class="form-control" ng-model="vsm.weight"></td>
+								<td><input class="form-control" ng-model="vsm.height"></td>
+								<td><input class="form-control" ng-model="vsm.bmi"></td>
+								<td><input class="form-control" ng-model="vsm.idealweight"></td>
+								<!-- ideal body weight -->
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div class="panel-footer">
+					<div class="row">
+						<div class="col-lg-10">
+							<button class="btn btn-success" ng-click="device()">Get Input From Device</button>&nbsp;&nbsp;
+						</div>
+						<div class="col-lg-2">
+							<button class="btn btn-primary" ng-click="add()">Add</button>&nbsp;&nbsp;
+							<button class="btn btn-info" ng-click="update()">Update</button>&nbsp;&nbsp;
+							<button class="btn btn-info" ng-click="clear()">Clear</button>&nbsp;&nbsp;
+						</div>
+					</div>				
+				</div>
 			</div>
 		</div>
 		<!-- Vital Signs History -->
-		<div class="panel panel-default">
+		<div class="panel panel-default panel-primary">
 			<div class="panel-heading" role="tab" id="headingOne">
 				<h4 class="panel-title">
-					<a role="button" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">+ VITAL SIGNS HISTORY</a>
+					<a role="button" data-toggle="collapse" href="#collapseOne"
+						aria-expanded="true" aria-controls="collapseOne">+ VITAL SIGNS
+						HISTORY</a>
 				</h4>
 			</div>
-			<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+			<div id="collapseOne" class="panel-collapse collapse in"
+				role="tabpanel" aria-labelledby="headingOne">
 				<div class="panel-body">
 					<table class="table table-bordered table-striped">
 						<thead>
@@ -188,19 +238,22 @@
 								<td>{{vsm.systolic}}</td>
 								<td>{{vsm.temperature}}</td>
 								<td>{{vsm.weight}}</td>
-								<td><button class="btn btn-danger" ng-click="remove(vsm.id)">Remove</button></td>
+								<td><button class="btn btn-danger"
+										ng-click="remove(vsm.id)">Remove</button></td>
 								<td><button class="btn btn-warning" ng-click="edit(vsm.id)">Edit</button></td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
-			</div>			
+			</div>
 		</div>
-	
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>	
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
 	<script src="controllers/indexController.js"></script>
 </body>
 </html>
