--- a/public/history.html
+++ b/public/history.html
@@ -34,158 +34,475 @@
 <br />
 <div class="row">
 	<div class="col-sm-3">
-		<strong>CHARACTER OF CHEST PAIN: </strong>
+		<strong><u>CHARACTER OF CHEST PAIN </u></strong>
 	</div>
-	<div class="col-sm-9">
+	<div class="col-sm-9"></div>
+</div>
+<br />
+<div class="row">	
+	<div class="col-sm-12">
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Burning</label>
 			</div>
-			<div class="col-sm-8">
-				<textarea class="form-control" rows="2"></textarea>
-			</div>			
-		</div>
-		<br/>
-		<div class="row">
 			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Constricting / Pressing</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
-			</div>
+			</div>			
 		</div>
 		<br/>
+		<br/>
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Continuous Pain</label>	
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
-		</div>
-		<br/>
-		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Intermittent Pain</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
-			</div>			
+			</div>
 		</div>
 		<br/>
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Pain at Rest</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
-		</div>
-		<br/>
-		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Pain on Exertion</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
 		</div>
 		<br/>
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Pain on Movement / Changing Position</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
-		</div>
-		<br/>
-		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Pain worsen on Exertion</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
 		</div>
 		<br/>
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Pleuritic Chest Pain</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
-		</div>
-		<br/>
-		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Pricking / Stabbing</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
 		</div>
 		<br/>
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Radiating Pain</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
-		</div>
-		<br/>
-		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Others, specify</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
-			</div>			
+			</div>
 		</div>
 	</div>	
 </div>
 <br />
 <div class="row">
 	<div class="col-sm-3">
-		<strong>PAIN RELIEF: </strong>
+		<strong><u>PAIN RELIEF </u></strong>
 	</div>
-	<div class="col-sm-9">
+	<div class="col-sm-9"></div>
+</div>
+<br />
+<div class="row">
+	<div class="col-sm-12">
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> By Rest</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> By Medication</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+		</div>
+		<br/>
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> By Position</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Others, specify</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+		</div>
+	</div>
+</div>
+<br />
+<div class="row">
+	<div class="col-sm-3">
+		<strong><u>ASSOCIATED SYMPTOMS </u></strong>
+	</div>
+	<div class="col-sm-9"></div>
+</div>
+<br/>
+<div class="row">		
+	<div class="col-sm-12">
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Sweating</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Nausea</label>
+			</div>
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>			
 		</div>
 		<br/>
 		<div class="row">
-			<div class="col-sm-4">
-				<label><input type="checkbox"> By Medication</label>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Vomitting</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Palpitation</label>
+			</div>
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
 		</div>
 		<br/>
 		<div class="row">
-			<div class="col-sm-4">
-				<label><input type="checkbox"> By Position</label>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Cough</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Fever</label>
+			</div>
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
 		</div>
 		<br/>
 		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Dizziness</label>
+			</div>
 			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Syncopal Attack</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+		</div>
+		<br/>
+		<div class="row">
+			<div class="col-sm-2">
 				<label><input type="checkbox"> Others, specify</label>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-4">
 				<textarea class="form-control" rows="2"></textarea>
 			</div>
+			<div class="col-sm-2"></div>
+			<div class="col-sm-4"></div>
 		</div>
+	</div>
+</div>
+<br />
+<div class="row">
+	<div class="col-sm-3">
+		<strong><u>RISK FACTOR </u></strong>
+	</div>
+	<div class="col-sm-9"></div>
+</div>
+<br />
+<div class="row">	
+	<div class="col-sm-12">
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> IHD / CAD</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-1">
+				<label>Duration </label>
+			</div>
+			<div class="col-sm-5">
+				<label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years</label>
+			</div>			
+		</div>		
+		<br/>
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Hypertension</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-1">
+				<label>Duration </label>
+			</div>
+			<div class="col-sm-5">
+				<label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years</label>
+			</div>			
+		</div>		
+		<br/>
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Diabetes Mellitus</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-1">
+				<label>Duration </label>
+			</div>
+			<div class="col-sm-5">
+				<label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years</label>
+			</div>			
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Dyslipidemia</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-1">
+				<label>Duration </label>
+			</div>
+			<div class="col-sm-5">
+				<label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years</label>
+			</div>			
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Smoker</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-1">
+				<label>Cigarette Amount </label>
+			</div>
+			<div class="col-sm-5">
+				<label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years</label>
+			</div>			
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Ex-Smoker</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-1">
+				<label>Duration of Smoking </label>
+			</div>
+			<div class="col-sm-5">
+				<label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years</label>
+			</div>			
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Overweight</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-1">
+				<label>BMI </label>
+			</div>
+			<div class="col-sm-5">
+				<label><input type="text"></label>
+			</div>			
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Family History of IHD</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-1">
+				<label>Relationship</label>
+			</div>
+			<div class="col-sm-5">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>		
+		</div>
+		<br/>
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Others, specify</label>
+			</div>
+			<div class="col-sm-4">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-2"></div>
+			<div class="col-sm-4"></div>
+		</div>
+	</div>
+</div>
+<br />
+<div class="row">
+	<div class="col-sm-3">
+		<strong><u>PAST MEDICAL / SURGICAL HISTORY </u></strong>
+	</div>
+	<div class="col-sm-9"></div>
+</div>
+<br />
+<div class="row">	
+	<div class="col-sm-12">
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Hypertension</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> IHD</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Diabetes / Mellitus</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> CVA</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Asthma</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> COAD</label>
+			</div>
+		</div>		
+		<br/>
+		<div class="row">
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Renal Disease</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Epilepsy</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Peptic Ulcer Disease</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> Angioplasty</label>
+			</div>
+			<div class="col-sm-2">
+				<label><input type="checkbox"> CABG</label>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>		
+		<br/>
+		<div class="row">			
+			<div class="col-sm-3">
+				<label><input type="checkbox"> Previous Operation / Procedure</label>
+			</div>
+			<div class="col-sm-3">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-3">
+				<label><input type="checkbox"> Others, specify</label>
+			</div>
+			<div class="col-sm-3">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+		</div>		
+		<br/>
+	</div>
+</div>
+<br />
+<div class="row">
+	<div class="col-sm-2">
+		<strong>DRUG HISTORY: </strong>
+	</div>
+	<div class="col-sm-4">
+		<textarea class="form-control" rows="3"></textarea>
+	</div>
+	<div class="col-sm-2">
+		<strong>PERSONAL AND FAMILY HISTORY: </strong>
+	</div>
+	<div class="col-sm-4">
+		<textarea class="form-control" rows="3"></textarea>
+	</div>
+</div>
+<br />
+<div class="row">	
+	<div class="col-sm-3">
+		<strong><u>MENSTRUAL HISTORY </u></strong>
+	</div>
+	<div class="col-sm-9"></div>
+</div>
+<br />
+<div class="row">
+	<div class="col-sm-4">
+		<label>Menarche Age:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years old</label>
+	</div>
+	<div class="col-sm-4">
+		<div class="row">
+			<div class="col-sm-6">
+				<label>LMP:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" ></label>
+			</div>
+			<div class="col-sm-6">
+				<label><input type="checkbox"> Unsure of Date</label>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-4">
+		<label>POA:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;weeks</label>
 	</div>
 </div>
