Update history.html & add back test.js

--- a/public/history.html
+++ b/public/history.html
@@ -34,13 +34,14 @@
 <br />
 <div class="row">
 	<div class="col-sm-3">
-		<strong><u>CHARACTER OF CHEST PAIN </u></strong>
+		<strong>CHARACTER OF CHEST PAIN: </strong>
 	</div>
 	<div class="col-sm-9"></div>
 </div>
 <br />
-<div class="row">	
-	<div class="col-sm-12">
+<div class="row">
+	<div class="col-sm-1"></div>	
+	<div class="col-sm-11">
 		<div class="row">
 			<div class="col-sm-2">
 				<label><input type="checkbox"> Burning</label>
@@ -136,13 +137,14 @@
 <br />
 <div class="row">
 	<div class="col-sm-3">
-		<strong><u>PAIN RELIEF </u></strong>
+		<strong>PAIN RELIEF: </strong>
 	</div>
 	<div class="col-sm-9"></div>
 </div>
 <br />
 <div class="row">
-	<div class="col-sm-12">
+	<div class="col-sm-1"></div>
+	<div class="col-sm-11">
 		<div class="row">
 			<div class="col-sm-2">
 				<label><input type="checkbox"> By Rest</label>
@@ -177,13 +179,14 @@
 <br />
 <div class="row">
 	<div class="col-sm-3">
-		<strong><u>ASSOCIATED SYMPTOMS </u></strong>
+		<strong>ASSOCIATED SYMPTOMS: </strong>
 	</div>
 	<div class="col-sm-9"></div>
 </div>
 <br/>
 <div class="row">		
-	<div class="col-sm-12">
+	<div class="col-sm-1"></div>
+	<div class="col-sm-11">
 		<div class="row">
 			<div class="col-sm-2">
 				<label><input type="checkbox"> Sweating</label>
@@ -259,13 +262,14 @@
 <br />
 <div class="row">
 	<div class="col-sm-3">
-		<strong><u>RISK FACTOR </u></strong>
+		<strong>RISK FACTOR: </strong>
 	</div>
 	<div class="col-sm-9"></div>
 </div>
 <br />
-<div class="row">	
-	<div class="col-sm-12">
+<div class="row">
+	<div class="col-sm-1"></div>
+	<div class="col-sm-11">
 		<div class="row">
 			<div class="col-sm-2">
 				<label><input type="checkbox"> IHD / CAD</label>
@@ -401,13 +405,14 @@
 <br />
 <div class="row">
 	<div class="col-sm-3">
-		<strong><u>PAST MEDICAL / SURGICAL HISTORY </u></strong>
+		<strong>PAST MEDICAL / SURGICAL HISTORY: </strong>
 	</div>
 	<div class="col-sm-9"></div>
 </div>
 <br />
 <div class="row">	
-	<div class="col-sm-12">
+	<div class="col-sm-1"></div>
+	<div class="col-sm-11">
 		<div class="row">
 			<div class="col-sm-2">
 				<label><input type="checkbox"> Hypertension</label>
@@ -483,7 +488,7 @@
 <br />
 <div class="row">	
 	<div class="col-sm-3">
-		<strong><u>MENSTRUAL HISTORY </u></strong>
+		<strong>MENSTRUAL HISTORY: </strong>
 	</div>
 	<div class="col-sm-9"></div>
 </div>
@@ -504,5 +509,11 @@
 	</div>
 	<div class="col-sm-4">
 		<label>POA:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;weeks</label>
+	</div>
+</div>
+<br />
+<div class="row">
+	<div class="col-sm-12">
+		
 	</div>
 </div>
