--- a/public/history.html
+++ b/public/history.html
@@ -494,26 +494,79 @@
 </div>
 <br />
 <div class="row">
-	<div class="col-sm-4">
-		<label>Menarche Age:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years old</label>
-	</div>
-	<div class="col-sm-4">
+	<div class="col-sm-1"></div>
+	<div class="col-sm-11">
 		<div class="row">
-			<div class="col-sm-6">
-				<label>LMP:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" ></label>
+			<div class="col-sm-4">
+				<label>Menarche Age:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years old</label>
 			</div>
-			<div class="col-sm-6">
-				<label><input type="checkbox"> Unsure of Date</label>
+			<div class="col-sm-5">
+				<div class="row">
+					<div class="col-sm-6">
+						<label>LMP:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" ></label>
+					</div>
+					<div class="col-sm-6">
+						<label><input type="checkbox"> Unsure of Date</label>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<label>POA:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;weeks</label>
 			</div>
 		</div>
-	</div>
-	<div class="col-sm-4">
-		<label>POA:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;weeks</label>
-	</div>
-</div>
-<br />
-<div class="row">
-	<div class="col-sm-12">
-		
-	</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-1">
+				<label>Pregnant: </label>
+			</div>
+			<div class="col-sm-11">
+				<div class="input-group">
+					<label>Yes <input type="radio"></label>
+					<label>No <input type="radio"></label>
+				</div>
+			</div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-3">
+				<label>EDD:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text"></label>
+			</div>
+			<div class="col-sm-3">
+				<label>GRAVIDA:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date"></label>
+			</div>
+			<div class="col-sm-3">
+				<label>PARA:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text"></label>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-3">
+				<label>ABORTION:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text"></label>
+			</div>
+			<div class="col-sm-6">
+				<label>CAESARIAN OPERATION:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text"></label>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-6">
+				<label>Menopause Age:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><label><input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;years old</label>
+			</div>
+			<div class="col-sm-6"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-sm-1">
+				<label>Remarks: </label>
+			</div>
+			<div class="col-sm-5">
+				<textarea class="form-control" rows="2"></textarea>
+			</div>
+			<div class="col-sm-6"></div>
+		</div>
+	</div>	
 </div>
